--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="shortcut icon" href="https://cdn.betterttv.net/emote/5803757f3d506fea7ee35267/3x.webp">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
