--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="https://cdn.betterttv.net/emote/5803757f3d506fea7ee35267/3x.webp">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Codi Kader Portfolio</title>
   </head>
   <body>
     <noscript>
