--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="https://i.postimg.cc/bJNx7K6Q/C-K.jpg">
+    <link rel="shortcut icon" href="../src/assets/image/C-K.png">
     <title>Codi Kader Portfolio</title>
   </head>
   <body>
